k8s/base/30-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: sqli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: gateway
          image: owasp/modsecurity-crs:nginx
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: gateway-conf
              mountPath: /etc/nginx/templates/conf.d/default.conf.template
              subPath: default.conf
      volumes:
        - name: gateway-conf
          configMap:
            name: gateway-nginx
