k8s/base/31-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: sqli
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
